finally figured out the article spacing issue :D

--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ body {
     float: left;
     width:58%;
     margin-bottom: 15px;
-    height: 390px;
+    height: 275px;
     background-color:#ebebeb;
     padding-left: 15px;
     padding-right: 15px;
@@ -46,7 +46,7 @@ body {
   
   aside {
     float: right;
-    height: 250px;
+    height: 275px;
     width: 34%;
     border-top-width: 20px;
     background-color:#ebebeb;
@@ -70,6 +70,7 @@ body {
     background-color:#777;
     color:#ebebeb;
     padding: 15px;
+    border-top: 25px solid;
   }
     
   h1 {
